# dotfiles

./: .#setup.sh  ._b00t_.toml  .b00t.g0spell.md  .bash_aliases  .dockerignore  .gitignore  .gitmodules  .mcp.json  .roomodes  01-start.sh  02-tools.py  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.b00t-cli  Dockerfile.backup  InRelease  LappyX86.toml  README-_b00t_  README-_st0rytym3.md  README-azure.md  README-chat.md  README-docker.md  README-fzf.md  README-git.md  README-github.md  README-hive-acp.md  README-jq.md  README-moreutils.md  README-oauth.md  README-tasks.md  README-windows10.md  README.md  RELEASE.md  ROADMAP.md  TODO.md  TODO.pm  ZZ-cleanup.sh  _b00t_.bashrc  (+49 more)
.devcontainer/: devcontainer.json
.roo/: mcp.json.old
_b00t_/: # openscad  02-create.py  AGENT.md  Dockerfile  Dockerfile.ref  LICENSE.md  README-_b00t_  TODO.pm  ZZ-cleanup.sh  _b00t_.bashrc  ai-dev-stack.stack.toml  anthropic.ai.toml  asciinema.sh  aws-docs-test.mcp.toml  aws-knowledge-test.mcp.toml  b00t-mcp.mcp.toml  b00t.just  b00t.toml  bash.🔨  brave-search.mcp.toml  browser-use.mcp.toml  build.sh  claude-3-5-sonnet.ai_model.toml  context7.mcp.toml  curl.apt.toml  devcontainer.json  fetch-url-as-markdown.mcp.toml  filesystem.mcp-json.toml  filesystem.mcp.toml  geminicli.cli.toml  gh.toml  git-cliff.toml  git-semver.toml.ignore  github.mcp-json.toml  github.mcp.toml  google-chrome.bash.toml  gpt-4o-mini.ai_model.toml  grok-guru.mcp.toml  install-anycloud.sh  install_vet.sh  (+33 more)
android/: README.md  run.sh
azure.👾/: AZ_CLI_init.🤖.++.py  AZ_CLI_init.🤖.sh  AZ_init.🤖.sh
azure.🤖.云☁️/: AZ___todo____.🤖.sh  AZ_init.🤖.sh  README-azure.md  README.md  bicep.sh  init.🤖.notes.sh  (+1 more)
b00t-c0re-lib/: Cargo.toml  README.md  justfile
b00t-c0re-lib/src/: agent_coordination.rs  ai_client.rs  b00t_config.rs  context.rs  datum_ai_model.rs  grok.rs  learn.rs  lfmf.rs  lib.rs  mcp_proxy.rs  mcp_registry.rs  rag.rs  redis.rs  rhai_engine.rs  secret_validation.rs  template.rs  utils.rs
b00t-c0re-npm/: Cargo.toml  README.md  b00t_c0re.d.ts  b00t_c0re.js  b00t_c0re_bg.wasm  b00t_c0re_bg.wasm.d.ts  package.json
b00t-c0re-npm/src/: lib.rs
b00t-cli/: ACP_INTEGRATION.md  CHAT_INTEGRATION.md  CLAUDE.md  Cargo.toml  DATUM_DEPENDENCY_PLAN.md  TODO.md  justfile  prd.txt  test_load.rs
b00t-cli/examples/: test_cloud_sync.rs
b00t-cli/learn/: rust.md  testtool.md
b00t-cli/samples/: README.md  with-hint-comments.json
b00t-cli/samples/ai/: anthropic.ai.toml  anthropic.toml  ollama.ai.toml  ollama.toml  openai.ai.toml  openai.toml
b00t-cli/samples/cli/: gh.cli.toml  just.cli.toml  rustc.cli.toml
b00t-cli/samples/docker/: postgres.docker.toml
b00t-cli/samples/mcp/: brave-search.mcp.toml  direct-format.json  filesystem.mcp.toml  github.mcp.toml  mcpservers-format.json  playwright.json  with-comments.json
b00t-cli/src/: cloud_sync.rs  datum_ai.rs  datum_apt.rs  datum_bash.rs  datum_cli.rs  datum_database.rs  datum_docker.rs  datum_gemini.rs  datum_k8s.rs  datum_mcp.rs  datum_repo.rs  datum_stack.rs  datum_vscode.rs  dependency_resolver.rs  integration_tests.rs  lib.rs  main.rs  session_memory.rs  test_cloud_integration.rs  traits.rs  utils.rs  whoami.rs
b00t-cli/src/commands/: acp.rs  advice.rs  ai.rs  app.rs  chat.rs  cli_cmd.rs  grok.rs  init.rs  k8s.rs  learn.rs  lfmf.rs  mcp.rs  mod.rs  redis.rs  script.rs  session.rs  stack.rs  tiktoken.rs  whatismy.rs
b00t-cli/src/k8s/: client.rs  config.rs  error.rs  mod.rs  resources.rs  translation.rs  utils.rs
b00t-cli/tests/: ai_test.rs  cli_subsystem_test.rs  constraint_test.rs  docker_test.rs  hello_world_test.rs  integration_test.rs  mcp_output.rs  session_memory_test.rs
b00t-grok/: Cargo.toml  README.md  build.rs  justfile  plan1.md  plan2.md
b00t-grok-py/: BUILD.md  README.md  pyproject.toml  test_guru.py
b00t-grok-py/python/b00t_grok_guru/: __init__.py  guru.py  server.py  types.py
b00t-grok/b00t-grok/: test_grok.py
b00t-grok/src/: errors.rs  lib.rs
b00t-grok/tests/: integration_tests.rs
b00t-j0b-py/: .env.example  README.md  justfile  pyproject.toml
b00t-j0b-py/src/: __init__.py
b00t-j0b-py/src/b00t_j0b_py/: __init__.py  advanced_chunking.py  advanced_jobs.py  cli.py  config.py  content_processors.py  crawler.py  grok_integration.py  jobs.py  redis_client.py  robots.py  rq_integration.py
b00t-j0b-py/src/b00t_j0b_py/parsers/: __init__.py  base.py  crates_parser.py  github_parser.py  npm_parser.py  pypi_parser.py
b00t-j0b-py/tests/: __init__.py  test_advanced_chunking.py  test_crawler.py  test_grok_integration.py  test_parsers.py
b00t-lib-agent-coordination-protocol-rs/: Cargo.toml  README.md
b00t-lib-agent-coordination-protocol-rs/examples/: basic.rs  three_agent_demo.rs
b00t-lib-agent-coordination-protocol-rs/src/: agent.rs  error.rs  lib.rs  security.rs  transport.rs  wasm.rs
b00t-lib-chat/: Cargo.toml  acp.just  build.rs  pyproject.toml
b00t-lib-chat/examples/: basic.rs  three_agent_demo.rs
b00t-lib-chat/src/: client.rs  error.rs  lib.rs  message.rs  protocol.rs  python.rs  server.rs  transport.rs
b00t-mcp/: Cargo.toml  INTEGRATION_TEST_RESULTS.md  OAUTH.md  README-RAGLight.md  README-Registry.md  README.md  cloudflare-architecture.md
b00t-mcp/learn/: rust.md
b00t-mcp/src/: acl.rs  acp_hive.rs  acp_tools.rs  chat.rs  clap_reflection.rs  clap_to_mcp.rs  command_dispatcher.rs  derive_mcp.rs  github_auth.rs  lib.rs  main.rs  mcp_registry.rs  mcp_registry_tools.rs  mcp_server.rs  mcp_server_rusty.rs  mcp_tools.rs  oauth.rs  oauth_minimal.rs  params.rs  proxy_mcp_tools.rs  rag_light.rs  rag_mcp_tools.rs
b00t-mcp/tests/: acl_test.rs  mcp_server_test.rs
b00t-py/: Cargo.toml  README.md  justfile  pyproject.toml
b00t-py/python/b00t_py/: __init__.py  exceptions.py
b00t-py/src/: lib.rs
k0mmand3r/: .mocharc.json  .npmignore  Cargo.toml  Makefile  README.md  RELEASE.md  TODO.md  package-lock.json  package.json  pyproject.toml  release.sh  setup.py  synthetic_commands.txt  tox.ini  winnow-summary.txt
k0mmand3r/src/: lib.rs  python.rs  typescript_wasm.rs
k0mmand3r/tests/: test_k0mmand3r.py  test_k0mmand3r.ts
(+455 files in other folders)
