[workspace]
members = [
    "b00t-cli",
    "b00t-mcp",
]
resolver = "2"

[workspace.package]
version = "0.6.0"
edition = "2024"
authors = ["Brian Horakh <brian@promptexecution.com>"]
license = "MIT"
repository = "https://github.com/elasticdotventures/dotfiles"

[workspace.dependencies]
# Workspace members
b00t-cli = { version = "0.6.0", path = "b00t-cli" }

# Common dependencies that could be shared across workspace members
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
clap = { version = "4.5.4", features = ["derive", "env"] }
regex = "1.10.5"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1.34.0", features = ["full"] }
rmcp = { version = "0.3.2", features = ["client", "transport-io", "server", "macros", "schemars"] }

[workspace.lints.rust]
unused_must_use = "warn"
dead_code = "warn"

[workspace.lints.clippy]
pedantic = "warn"
cargo = "warn"
# Allow some pedantic lints that are too noisy
module_name_repetitions = "allow"
similar_names = "allow"
too_many_lines = "allow"