[package]
name = "b00t-c0re-lib"
# 🤓 SINGLE SOURCE OF TRUTH for b00t ecosystem versioning
# All other crates (b00t-cli, b00t-mcp) should reference this version
version = "0.7.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core shared library for b00t-cli tools and b00t-mcp server"
keywords = ["b00t", "core", "template", "mcp", "shared"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "b00t_c0re_lib"
path = "src/lib.rs"

[dependencies]
# Workspace dependencies
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
chrono.workspace = true
regex.workspace = true

# Core lib specific dependencies
shellexpand = "3.1.0"
dirs = "6.0"
duct = "1.0"
redis = "0.32.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
tempfile = "3.0"