[package]
name = "b00t-cli"
version = "0.5.3"
edition = "2024"

[[bin]]
name = "b00t-cli"
path = "src/main.rs"

[lib]
name = "b00t_cli"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
clap = { version = "4.5.4", features = ["derive", "env"] }
regex = "1.10.5"
duct = "0.13.6"
shellexpand = "3.1.0"
semver = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tera = "1.20.0"
dirs = "5.0"

[dev-dependencies]
tempfile = "3.0"
