[package]
name = "b00t-cli"
version = "0.5.3"
edition = "2024"

[[bin]]
name = "b00t-cli"
path = "src/main.rs"

[lib]
name = "b00t_cli"
path = "src/lib.rs"

[dependencies]
# Shared workspace dependencies
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
clap = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

# b00t-cli specific dependencies
duct = "0.13.6"
shellexpand = "3.1.0"
semver = "1.0"
tera = "1.20.0"
dirs = "5.0"

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.0"
