[package]
name = "b00t-cli"
version = "0.6.0"
edition = "2024"

[[bin]]
name = "b00t-cli"
path = "src/main.rs"

[lib]
name = "b00t_cli"
path = "src/lib.rs"

[dependencies]
# Shared workspace dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml.workspace = true
clap = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

# b00t-cli specific dependencies
duct = "1.0"
shellexpand = "3.1.0"
semver = "1.0"
tera = "1.20.0"
dirs = "6.0"
kube = { version = "1.1", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.25", features = ["v1_30"] }
snafu = "0.8"
tokio = { version = "1.34.0", features = ["full"] }
serde_yaml = "0.9"
tracing = "0.1"
uuid = { version = "1.0", features = ["v4"] }

[dev-dependencies]
assert_cmd = "2.0.17"
tempfile = "3.0"
