[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "b00t-j0b-py"
version = "0.1.0"
description = "Web crawler job system for b00t ecosystem using Redis RQ"
authors = [
    {name = "elasticdotventures", email = "github@promptexecution.com"},
]
dependencies = [
    "rq>=1.16.0",
    "redis>=5.0.0",
    "requests>=2.31.0",
    "validators>=0.22.0",
    "beautifulsoup4>=4.12.0",
    "markdownify>=0.11.6",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.25.0",
    "pypdf2>=3.0.0",
    "returns>=0.22.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-asyncio>=1.1.0",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0", 
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
]

[project.scripts]
b00t-j0b = "b00t_j0b_py.cli:main"

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "W", "F", "I", "N", "B", "A", "S", "T"]
ignore = ["E501", "B008"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=b00t_j0b_py --cov-report=term-missing"
