[package]
name = "b00t-chat"
version = "0.1.0"
edition = "2021"
description = "b00t chat coordination system with multi-transport support"
license = "MIT"
repository = "https://github.com/promptexecution/b00t"
keywords = ["agent", "chat", "coordination", "nats", "ipc"]
categories = ["network-programming", "web-programming", "development-tools"]
authors = ["PromptExecution <noreply@promptexecution.com>"]

# [workspace] - removed to avoid conflict with parent workspace

[lib]
name = "b00t_chat"
crate-type = ["cdylib", "rlib"]

[dependencies]
async-nats = "0.36"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
anyhow = "1.0"
futures = "0.3"
jsonwebtoken = "9.0"
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", features = ["json"] }
dirs = "6.0"

# Python bindings - using compatible version
pyo3 = { version = "0.25", features = ["extension-module"], optional = true }

# JavaScript/TypeScript bindings  
wasm-bindgen = { version = "0.2", optional = true }
js-sys = { version = "0.3", optional = true }
web-sys = { version = "0.3", optional = true }
serde-wasm-bindgen = { version = "0.6", optional = true }

[dev-dependencies]
tracing-subscriber = "0.3"
rand = "0.8"

[features]
default = []
python = ["pyo3"]
wasm = ["wasm-bindgen", "js-sys", "web-sys", "serde-wasm-bindgen"]

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Examples are in examples/ directory, not as bins
