[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "b00t-acp"
version = "0.1.0"
description = "Agent Coordination Protocol (ACP) StepSync implementation"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "PromptExecution", email = "noreply@promptexecution.com" }
]
keywords = ["agent", "coordination", "protocol", "nats", "messaging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.8"

[project.urls]
Repository = "https://github.com/promptexecution/b00t"
Documentation = "https://docs.rs/b00t-acp"

[tool.maturin]
features = ["pyo3/extension-module", "python"]
python-source = "python"
module-name = "b00t_acp._native"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]