[package]
name = "b00t-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP (Model Context Protocol) server for b00t-cli command proxy with ACL filtering"
keywords = ["mcp", "b00t", "cli", "proxy", "acl"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "b00t_mcp"
path = "src/lib.rs"

[[bin]]
name = "b00t-mcp"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
regex.workspace = true
anyhow.workspace = true
chrono.workspace = true
tokio.workspace = true
rmcp.workspace = true

# b00t-mcp specific dependencies
b00t-cli = { version = "0.6.0", path = "../b00t-cli" }
shellexpand = "3.1.0"
dirs = "6.0"

# Code generation dependencies  
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

[dev-dependencies]
tempfile = "3.0"