[package]
name = "b00t-mcp"
# 🤓 Version inherited from b00t-c0re-lib - the single source of truth
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP (Model Context Protocol) server for b00t-cli command proxy with ACL filtering"
keywords = ["mcp", "b00t", "cli", "proxy", "acl"]
categories = ["command-line-utilities", "development-tools"]

[lib]
name = "b00t_mcp"
path = "src/lib.rs"

[[bin]]
name = "b00t-mcp"
path = "src/main.rs"


[dependencies]
# Workspace dependencies
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
regex.workspace = true
anyhow.workspace = true
chrono.workspace = true
tokio.workspace = true
rmcp.workspace = true
tracing.workspace = true

# b00t-mcp specific dependencies
b00t-cli = { workspace = true }
b00t-c0re-lib = { workspace = true }
shellexpand = "3.1.0"
dirs = "6.0"
schemars = "1.0"

# Code generation dependencies
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }

# HTTP server dependencies
axum = { version = "0.8.4", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }

# OAuth 2.1 authorization server dependencies
oauth2 = "5.0"
jsonwebtoken = "9.0"
uuid = { version = "1.0", features = ["v4"] }
base64 = "0.22"
axum-macros = "0.4"

# GitHub OAuth authentication
reqwest = { version = "0.12", features = ["json"] }
axum-extra = { version = "0.9", features = ["cookie"] }
urlencoding = "2.1"

[dev-dependencies]
tempfile = "3.0"