[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "b00t-py"
description = "Python bindings for b00t-cli with native performance using PyO3"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Brian H.", email = "brianh@elastic.ventures"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9", 
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["b00t", "cli", "mcp", "tools", "performance"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/elasticdotventures/dotfiles"
Repository = "https://github.com/elasticdotventures/dotfiles"
Issues = "https://github.com/elasticdotventures/dotfiles/issues"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "b00t_py"
python-source = "python"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "mypy>=1.0",
]